<resources>
    <string name="app_name">Android-Pv-221</string>
    <string name="app_title">Привет Андроид</string>
    <string name="main_btn_calc">Калькулятор</string>

    <string name="calc_tv_title">Калькулятор</string>
    <string name="main_btn_exchange">Exchange</string>
    <string name="exchange_tv_title">Курс гривны</string>
    <string name="exchange_content_description">Список курсов валют</string>

    Список курсов валют



    <!-- region Calc -->
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9\u2044\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u00B2\u221A\u0078</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_multiply">\u00D7</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_pm">\u00B1</string>
    <string name="calc_btn_coma">.</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_digit_0">0</string>
    <string name="calc_btn_digit_1">1</string>
    <string name="calc_btn_digit_2">2</string>
    <string name="calc_btn_digit_3">3</string>
    <string name="calc_btn_digit_4">4</string>
    <string name="calc_btn_digit_5">5</string>
    <string name="calc_btn_digit_6">6</string>
    <string name="calc_btn_digit_7">7</string>
    <string name="calc_btn_digit_8">8</string>
    <string name="calc_btn_digit_9">9</string>
    <string name="error_invalid_input">Не правильный ввод</string>

    <string name="error_divide_by_zero">error divide by zero</string>

    <string name="main_btn_game">2048</string>

    <string name="main_btn_anim">anim</string>

    <string name="game_tv_score">SCORE\n%s</string>
    <string name="game_tv_best">BEST\n%s</string>
    <string name="game_btn_new">NEW</string>
    <string name="game_btn_undo">UNDO</string>
    <string name="game_tv_hint">2048</string>
    <string name="game_tv_2048">2048</string>


    <!-- region Anim -->
    <string name="anim_tv_alpha">Альфа</string>
    <string name="anim_tv_scale">Масштаб</string>
    <string name="anim_tv_rotate">Поворот</string>
    <string name="anim_tv_translate">Зміщення</string>
    <string name="anim_tv_combo">Combo</string>

    <string name="main_btn_chat">Chat</string>
    <string name="savename">SaveName</string>
    <string name="author">Author:</string>

    main_btn_anim

    <!-- endregion -->

    <!-- endregion -->

</resources>