<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_layout_background"
    tools:context=".CalcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_tv_title"
        android:textColor="@color/calc_text_color"
        android:textSize="18sp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/calc_tv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/calc_history_color"
        android:textSize="20sp"
        tools:text="5 - 3 =" />

    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/calc_text_color"
        android:textSize="54sp"
        android:textStyle="bold"
        tools:text="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_percent"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_percent"
                android:tag="percent" />
            <Button
                android:id="@+id/calc_btn_ce"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_ce"
                android:tag="clearEntry" />
            <Button
                android:id="@+id/calc_btn_c"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_c"
                android:tag="clear" />
            <Button
                android:id="@+id/calc_btn_backspace"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_backspace"
                android:tag="backspace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_inverse"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_inverse"
                android:tag="inverse" />
            <Button
                android:id="@+id/calc_btn_square"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_square"
                android:tag="square" />
            <Button
                android:id="@+id/calc_btn_sqrt"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_sqrt"
                android:tag="sqrt" />
            <Button
                android:id="@+id/calc_btn_divide"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_divide"
                android:tag="divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_digit_7"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_7"
                android:tag="7" />
            <Button
                android:id="@+id/calc_btn_digit_8"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_8"
                android:tag="8" />
            <Button
                android:id="@+id/calc_btn_digit_9"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_9"
                android:tag="9" />
            <Button
                android:id="@+id/calc_btn_multiply"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_multiply"
                android:tag="multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_digit_4"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_4"
                android:tag="4" />
            <Button
                android:id="@+id/calc_btn_digit_5"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_5"
                android:tag="5" />
            <Button
                android:id="@+id/calc_btn_digit_6"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_6"
                android:tag="6" />
            <Button
                android:id="@+id/calc_btn_minus"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_minus"
                android:tag="minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_digit_1"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_1"
                android:tag="1" />
            <Button
                android:id="@+id/calc_btn_digit_2"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_2"
                android:tag="2" />
            <Button
                android:id="@+id/calc_btn_digit_3"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_3"
                android:tag="3" />
            <Button
                android:id="@+id/calc_btn_plus"
                style="@style/calc_btn_operation"
                android:text="@string/calc_btn_plus"
                android:tag="plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/calc_btn_pm"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_pm"
                android:tag="plus_minus" />
            <Button
                android:id="@+id/calc_btn_digit_0"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_digit_0"
                android:tag="0" />
            <Button
                android:id="@+id/calc_btn_coma"
                style="@style/calc_btn_digit"
                android:text="@string/calc_btn_coma"
                android:tag="comma" />
            <Button
                android:id="@+id/calc_btn_equal"
                style="@style/calc_btn_equal"
                android:text="@string/calc_btn_equal"
                android:tag="equal" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>